--- a/MoviesApp/Base.lproj/Main.storyboard
+++ b/MoviesApp/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
         <!--Movies-->
         <scene sceneID="kPh-rs-VTi">
             <objects>
-                <viewController storyboardIdentifier="MoviesViewController" title="Movies" id="jxA-M9-JWz" customClass="MoviesViewController" customModule="MoviesApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ImagesViewController" title="Movies" id="jxA-M9-JWz" customClass="ImagesViewController" customModule="MoviesApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7AJ-nI-jOZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -114,7 +114,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieInfoCell" id="Aqq-Gd-6aI" customClass="MovieInfoCell" customModule="MoviesApp" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageInfoCell" id="Aqq-Gd-6aI" customClass="ImageInfoCell" customModule="MoviesApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="189" height="180"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -148,8 +148,8 @@
                                         </constraints>
                                         <size key="customSize" width="189" height="180"/>
                                         <connections>
-                                            <outlet property="imgMovieImage" destination="UtU-Ul-GBP" id="meX-Ho-OXe"/>
-                                            <outlet property="lblMovieName" destination="ryb-Ah-OMr" id="KMt-ln-4zB"/>
+                                            <outlet property="imgCellImage" destination="UtU-Ul-GBP" id="ewL-fs-9KZ"/>
+                                            <outlet property="lblName" destination="ryb-Ah-OMr" id="PrX-sb-OWR"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -169,7 +169,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="xl3-5A-1TL"/>
                     <connections>
-                        <outlet property="objMoviesListView" destination="Tez-da-nKW" id="9yE-wz-vdQ"/>
+                        <outlet property="objImagesListView" destination="Tez-da-nKW" id="8aS-a8-rZg"/>
                         <outlet property="objTabListView" destination="Bp9-EV-jbC" id="TPf-aU-aDY"/>
                         <outlet property="view" destination="7AJ-nI-jOZ" id="sYk-DN-7SI"/>
                     </connections>
